@@ -1,3 +1,9 @@
+2005-12-02  Murray Cumming <murrayc@murrayc.com>
+
+	* docs/reference/Doxyfile.in: Reword the title of the 
+	since pages, to make it clear that they do not include 
+	new API in subsequent versions.
+
 2005-12-01  Murray Cumming <murrayc@murrayc.com>
 
 	* gdk/gdkmm/general.h: Mark cairo API as new in 2.10.
